v11.0.3 Fixed dropdown CSS to allow link clicking on small viewports

--- a/src/sass/components/_drop.scss
+++ b/src/sass/components/_drop.scss
@@ -17,13 +17,6 @@
 		}
 	}
 
-	@media (max-width: $bp-medium) {
-		.js-astro & > a {
-			cursor: not-allowed;
-			pointer-events: none;
-		}
-	}
-
 	&:focus > a:after,
 	&:hover > a:after,
 	&.active > a:after {
